--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
 			<artifactId>jmh-generator-annprocess</artifactId>
 			<version>1.19</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-52</artifactId>
+			<version>2.9.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
