--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.mail.password=dfyzdjrfk2001
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+spring.servlet.multipart.max-file-size=10MB
+
 secure.registration.code.length=10
 
 jwt.token.issuer=tntu-docs
