--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/docs
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
 api.uri=http://localhost:8081
 
 spring.session.jdbc.initialize-schema: always
