--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,7 @@ jwt.token.access.expirationInDays=14
 jwt.token.refresh.signingKey=8UEK}YBYd7_*p).[6X25]zv#W}x3*=:*X&Keb8+r3zgj}Hu4FT)4A[_X*?yZHE;C
 jwt.token.refresh.expirationInDays=60
 
+storage.location.root=/docs
 storage.location.public=/public
 storage.location.private=/private
 
