refactored core, remove unused paramaters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ api.uri=http://localhost:8081
 
 spring.session.jdbc.initialize-schema: always
 
+mail.content.registration=Your role: %s (%s).\n Your registration code: %s
 mail.host=smtp.gmail.com
 mail.port=587
 mail.user.email=4141zx@gmail.com
