--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8081
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/docs
 spring.datasource.username=postgres
-spring.datasource.password=regv0049
+spring.datasource.password=1234
+spring.session.jdbc.initialize-schema=always
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 api.uri=http://localhost:8081
@@ -35,5 +36,8 @@ jwt.token.refresh.expirationInDays=60
 storage.location.root=/docs
 storage.location.public=/public
 storage.location.private=/private
+
+visualisation.extensions=.doc,.docx
+cash-live.time.hour=5
 
 
