--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,7 @@ jwt.token.refresh.signingKey=8UEK}YBYd7_*p).[6X25]zv#W}x3*=:*X&Keb8+r3zgj}Hu4FT)
 jwt.token.refresh.expirationInDays=60
 
 storage.location.root=/docs
-storage.location.public=/public
-storage.location.private=/private
+office.location=C:/Program Files/LibreOffice
 
 visualisation.extensions=.doc,.docx
 cash-live.time.hour=5
